# wgunther85-Movie

./: .gitignore  CMakeLists.txt  Movie.cpp  Movie.h  MovieList.cpp  MovieList.h  main.cpp  readme.md
.github/workflows/: autoGrader.yml
inc/: StringFunctions.h
src/: StringFunctions.cpp  StringFunctionsTest.cpp
